# vuanem-suiteanalytics-connect

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  backfill.py  broadcast.py  components.old.py  components.py  docker-compose.yml  main.py  models.py  pg_models.py  pipelines.py  pyproject.toml  pytest.ini  tasks.py  test_requests.py
components/: connector.py  getter copy.py  getter.py  loader copy.py  loader.py  pg_models.py  query_builder.py  range_getter.py  utils.py
config/: ACCOUNTS.json  CASES.json  CLASSES.json  CUSTOMERS.json  DELIVERY_PERSON.json  DEPARTMENTS.json  EMPLOYEES.json  LOCATIONS.json  LOCATIONS.py  STORE_TRAFFIC.json  TRANSACTIONS.json  TRANSACTIONS.py  TRANSACTION_LINES.json  TRANSACTION_LINES.py  TRANSACTION_LINES3.json
db/: bigquery.py
dispatcher/: build.py  main.py  tables.json  test_units.py
docs/: dag.drawio
invoker/: Pipfile  build.py  main.py  requirements.txt  test.py
models/: ACCOUNTS.py  ADDRESSES.py  ADDRESS_BOOK.py  BUDGET.py  CAMPAIGNS.py  CASES.py  CASETYPE.py  CITYPROVINCE_LIST.py  CLASSES.py  CUSTOMERS.py  DELETED_RECORDS.py  DELIVERY_PERSON.py  DEPARTMENTS.py  EMPLOYEES.py  ENTITY.py  ENTITY_NOT_CUSTJOB.py  IR.py  ITEMS.py  ITEM_LOCATION_MAP.py  LOCATIONS.py  LOYALTY_CUSTOMER_GROUP.py  LOYALTY_TRANSACTION.py  ORIGINATING_LEADS.py  PROMOTION_SMS_INTEGRATION.py  PURCHASE_ORDER.py  QUANHUYEN_LIST.py  RATING.py  SERVICE_ADDON_SO_MAP.py  SERVICE_ADDON_TO_MAP.py  STORE_TRAFFIC.py  SUPPORT_PERSON_MAP.py  SYSTEM_NOTES_CREATE.py  SYSTEM_NOTES_PRICE.py  TRANSACTIONS.py  TRANSACTIONS_DUE_DATE.py  TRANSACTION_LINES.py  (+8 more)
(+195 files in other folders)
