[tool.poetry]
name = "vuanem-suiteanalytics-connect"
version = "4.2.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^3.0.1"
functions-framework = "^2.2.1"
JayDeBeApi = "^1.2.3"
JPype1 = "^1.3.0"
google-cloud-tasks = "^2.9.0"
compose = "^1.2.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2.5"
pytest-timeout = "^1.4.2"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings -s --durations=0"
testpaths = [
    "test",
]
# timeout = 900

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
